tests/fixtures/invalid/none_mul_bytes.py
# Cannot multiply None and Bytes
x: None = None * b"hello"
